--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.10+1
   get: ^4.6.6
+  carousel_slider: ^5.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
