--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,41 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - lib/assets/news_assets/trending/image_1.jpg
+    - lib/assets/news_assets/trending/image_10.jpg
+    - lib/assets/news_assets/trending/image_2.jpg
+    - lib/assets/news_assets/trending/image_3.jpg
+    - lib/assets/news_assets/trending/image_4.jpg
+    - lib/assets/news_assets/trending/image_5.jpg
+    - lib/assets/news_assets/trending/image_6.jpg
+    - lib/assets/news_assets/trending/image_7.jpg
+    - lib/assets/news_assets/trending/image_8.jpg
+    - lib/assets/news_assets/trending/image_9.jpg
+    - lib/assets/news_assets/foryou/image_1.jpg
+    - lib/assets/news_assets/foryou/image_10.jpg
+    - lib/assets/news_assets/foryou/image_11.jpg
+    - lib/assets/news_assets/foryou/image_12.jpg
+    - lib/assets/news_assets/foryou/image_13.jpg
+    - lib/assets/news_assets/foryou/image_14.jpg
+    - lib/assets/news_assets/foryou/image_15.jpg
+    - lib/assets/news_assets/foryou/image_2.jpg
+    - lib/assets/news_assets/foryou/image_3.jpg
+    - lib/assets/news_assets/foryou/image_4.jpg
+    - lib/assets/news_assets/foryou/image_5.jpg
+    - lib/assets/news_assets/foryou/image_6.jpg
+    - lib/assets/news_assets/foryou/image_7.jpg
+    - lib/assets/news_assets/foryou/image_8.jpg
+    - lib/assets/news_assets/foryou/image_9.jpg
+    - lib/assets/news_assets/newest/image_1.jpg
+    - lib/assets/news_assets/newest/image_2.jpg
+    - lib/assets/news_assets/newest/image_3.jpg
+    - lib/assets/news_assets/newest/image_4.jpg
+    - lib/assets/news_assets/newest/image_5.jpg
+    - lib/assets/news_assets/newest/image_6.jpg
+    - lib/assets/news_assets/newest/image_7.jpg
+    - lib/assets/news_assets/newest/image_8.jpg
+    - lib/assets/news_assets/newest/image_9.jpg
+    - lib/assets/news_assets/newest/image_10.jpg
     - lib/assets/avatar-placeholder.png
     - lib/assets/news_assets/unger_review_logo.jpeg
     - lib/assets/zn_logo.svg
