--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,31 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - lib/assets/news_assets/channel_logos/androidcentral.png
+    - lib/assets/news_assets/channel_logos/antaranews.ico
+    - lib/assets/news_assets/channel_logos/apnews.png
+    - lib/assets/news_assets/channel_logos/arizonasports_logo.png
+    - lib/assets/news_assets/channel_logos/arrowheadpride.ico
+    - lib/assets/news_assets/channel_logos/bbc.png
+    - lib/assets/news_assets/channel_logos/biztoc.png
+    - lib/assets/news_assets/channel_logos/business-standard_logo.jpg
+    - lib/assets/news_assets/channel_logos/cbssports.png
+    - lib/assets/news_assets/channel_logos/cnn.png
+    - lib/assets/news_assets/channel_logos/deseret_logo.png
+    - lib/assets/news_assets/channel_logos/foxsports.png
+    - lib/assets/news_assets/channel_logos/ibtimes_logo.jpg
+    - lib/assets/news_assets/channel_logos/managingmadrid.ico
+    - lib/assets/news_assets/channel_logos/marketplace.ico
+    - lib/assets/news_assets/channel_logos/nbcsports.png
+    - lib/assets/news_assets/channel_logos/nypost.png
+    - lib/assets/news_assets/channel_logos/reuters_logo.png
+    - lib/assets/news_assets/channel_logos/si.ico
+    - lib/assets/news_assets/channel_logos/technode.png
+    - lib/assets/news_assets/channel_logos/thepinknews.png
+    - lib/assets/news_assets/channel_logos/theweek.png
+    - lib/assets/news_assets/channel_logos/usa-today-logo.png
+    - lib/assets/news_assets/channel_logos/variety.png
+    - lib/assets/news_assets/channel_logos/yahoo.ico
     - lib/assets/news_assets/trending/image_1.jpg
     - lib/assets/news_assets/trending/image_10.jpg
     - lib/assets/news_assets/trending/image_2.jpg
