--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   get: ^4.6.6
   carousel_slider: ^5.0.0
-
+  sqflite: ^2.3.3+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
